package it.unisa.diem.wordageddong17;

public class RunMain {

    public static void main(String[] args) {
        App.main(args);
    }
    
}
