/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package it.unisa.diem.wordageddong17.database;

/**
 *
 * @author Mattia Sanzari
 */
public interface DosRegistrazione {
    
    public void inserisciUtente( String username, String email, String password,String foto);
    
}
