/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package it.unisa.diem.wordageddong17.model;

/**
 *
 * @author Mattia Sanzari
 */
public class SessioneDiGiocoOnline extends SessioneDiGioco {
    
}
